# simclr

./: .gitignore  README.md  pyproject.toml  results.md
scripts/: classifier.py  compare_tsne.py  main.py  visualize.py
src/: dataset.py  main.py  network.py  progress.py  tester.py  trainer.py  visualizer.py
